# hsl-telepresence-bot

./: .gitignore  CLAUDE.md  README.md
deploy/digitalocean/: app.yaml
deploy/pi/: hsl-robot-update.service  hsl-robot-update.timer  install.sh  robot.env.example  robot.service  update.sh
docs/: handoff.md  protocol.md
robot/: Cargo.toml  README.md
robot/src/: audio.rs  config.rs  link.rs  main.rs  protocol.rs  telemetry.rs  video.rs
robot/src/motion/: drive.rs  hat_driver.rs  mock.rs  mod.rs  pca9685.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  protocol.js  styles.css
web/src/components/: ConnectionBar.vue  DrivePad.vue  EStopButton.vue  TelemetryPanel.vue  VideoView.vue
web/src/composables/: useClasp.js  useRobotControl.js  useTelemetry.js  useVideo.js
