[package]
name = "hsl-telepresence-robot"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Onboard Rust agent for the HeatSync Labs telepresence robot"
license = "MIT OR Apache-2.0"

[[bin]]
name = "robot"
path = "src/main.rs"

[dependencies]
clasp-client = "4.5"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Motor HAT path (Linux + I2C only). Absent on non-Pi builds, which fall back
# to the mock backend so the control and video planes can be developed off-device.
pwm-pca9685 = { version = "1.0", optional = true }
linux-embedded-hal = { version = "0.4", features = ["i2c"], optional = true }

# Video plane. Requires GStreamer >= 1.20 and the good/bad/nice plugin sets on
# the host. Gated so the rest of the binary builds without the C toolchain.
gstreamer = { version = "0.25", optional = true }
gstreamer-app = { version = "0.25", optional = true }
gstreamer-sdp = { version = "0.25", optional = true }
gstreamer-webrtc = { version = "0.25", optional = true }
glib = { version = "0.21", optional = true }

[features]
default = ["motor-hat", "video"]
# Drive the Adafruit DC+Stepper Motor HAT over the Pi's own I2C bus.
motor-hat = ["dep:pwm-pca9685", "dep:linux-embedded-hal"]
# Capture the USB camera and stream it over WebRTC via GStreamer.
video = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-sdp", "dep:gstreamer-webrtc", "dep:glib"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
